--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </p>
     </footer>
 
-    <!-- <audio autoplay src="music.mp3"></audio> -->
+ <audio autoplay src="music.mp3"></audio>
 
 
    
