--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     </div>
                 </a>
         
-                <a href="http://youtube.com/c/hngamingr" target="blank" class="social-margin">
+                <a href="http://youtube.com/@hn0103" target="blank" class="social-margin">
                     <div class="social-icon youtube">
                         <i class="fa fa-youtube-play" aria-hidden="true"></i>
                     </div>
