--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <h6>I'm Youtube</h6>
         <div class="buttons">
             <div class="social-buttons">
-                <a href="http://www.facebook.com/hngamingr" target="blank" class="social-margin">
+                <a href="http://www.facebook.com/hnhn0103" target="blank" class="social-margin">
                     <div class="social-icon facebook">
                         <i class="fa fa-facebook" aria-hidden="true"></i>
                     </div>
@@ -51,7 +51,7 @@
         <div class="skills">
             <h6>Donate</h6>
             <ul>
-                <li class="a"><a href="https://linkvertise.com/452021/donate2/1">LINKVERTISE</a></li>
+                <li class="a"><a href="https://linkvertise.com/452021/donate3">DONATE</a></li>
                 <li class="a"><a href="https://paypal.me/hnghia2001">PAYPAL</a></li>
                 <li>CARDVIP: hoainghia2001@gmail.com</li>
                 <li>THESIEURE: hoainghia2001@gmail.com</li>
@@ -59,10 +59,8 @@
             <br>
             <h6>Download hack</h6>
             <ul>
-                <li class="a"><a href="https://fluxteam.net/android/">Fluxus</a></li>
-                <li class="a"><a href="https://hydrogen.sh/download">Hydro</a></li>
-                <li class="a"><a href="https://krnl.place/">Krnl</a></li>
-                <li class="a"><a href="https://www.youtube.com/@nngaming4953">Hướng dẫn tải hack</a></li>
+                <li class="a"><a href="https://link-center.net/452021/fluxandroid">Exploit Fluxus</a></li>
+                <li class="a"><a href="https://deltaexploits.net/getdelta_android.html">Exploit Delta</a></li>
             </ul>
         </div>
 
