--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
                 <li class="a"><a href="https://linkvertise.com/452021/deltaexploit/1" target="_blank">Exploit Delta</a>
                 </li>
                 <li class="a"><a href="https://link-hub.net/452021/arceusx" target="_blank">Exploit Arceus X</a></li>
+                <li class="a"><a href="https://github.com/SHAREHACK?tab=repositories" target="_blank">Script Hack</a></li>
             </ul>
         </div>
 
