--- a/index.html
+++ b/index.html
@@ -66,9 +66,10 @@
             <ul>
                 <li class="a"><a href="https://linkvertise.com/452021/donate3" target="_blank">DONATE</a></li>
                 <li class="a"><a href="https://paypal.me/hnghia2001" target="_blank">PAYPAL</a></li>
+                <li class="a"><a href="https://me.momo.vn/hoainghia" target="_blank">MOMO</a></li>
                 <p class="p1">CARDVIP: hoainghia2001@gmail.com</p>
                 <p class="p1">THESIEURE: hoainghia2001@gmail.com</p>
-                <p class="p1">MOMO: 0839527836</p>
+            
      
             </ul>
             <br>
