--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         crossorigin="anonymous"></script>
     <link href="https://use.fontawesome.com/releases/v6.3.0/css/all.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+
 </head>
 
 <body>
@@ -69,19 +70,25 @@
                 <li class="a"><a href="https://me.momo.vn/hoainghia" target="_blank">MOMO</a></li>
                 <p class="p1">CARDVIP: hoainghia2001@gmail.com</p>
                 <p class="p1">THESIEURE: hoainghia2001@gmail.com</p>
-            
-     
+
             </ul>
             <br>
-            <h6>Download hack</h6>
+            <h6>DOWNLOAD HACK MOBILE</h6>
             <ul>
                 <li class="a"><a href="https://link-center.net/452021/fluxandroid" target="_blank">Exploit Fluxus</a>
                 </li>
                 <li class="a"><a href="https://linkvertise.com/452021/deltaexploit/1" target="_blank">Exploit Delta</a>
                 </li>
                 <li class="a"><a href="https://link-hub.net/452021/arceusx" target="_blank">Exploit Arceus X</a></li>
-                <li class="a"><a href="https://github.com/SHAREHACK?tab=repositories" target="_blank">Script Hack</a></li>
+                <li class="a"><a href="https://github.com/SHAREHACK?tab=repositories" target="_blank">Script Hack</a>
+                </li>
             </ul>
+            <h6>DOWNLOAD HACK PC</h6>
+            <ul>
+                <li class="a"><a href="https://link-hub.net/452021/hack-pc-krnl" target="_blank">Exploit Krnl</a></li>
+                </li>
+            </ul>
+            <br>
         </div>
 
 
@@ -96,15 +103,15 @@
 
     <audio autoplay src="music.mp3"></audio>
 
-<script>
-    function copyToClipboard(element) {
-  var $temp = $("<input>");
-  $("body").append($temp);
-  $temp.val($(element).text()).select();
-  document.execCommand("copy");
-  $temp.remove();
-}
-</script>
+    <script>
+        function copyToClipboard(element) {
+            var $temp = $("<input>");
+            $("body").append($temp);
+            $temp.val($(element).text()).select();
+            document.execCommand("copy");
+            $temp.remove();
+        }
+    </script>
 
 </body>
 
