--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
             <h6>DOWNLOAD HACK PC</h6>
             <ul>
                 <li class="a"><a href="https://link-hub.net/452021/hack-pc-krnl" target="_blank">Exploit Krnl</a></li>
-                </li>
+                <li class="a"><a href="/script/chest-farm.html" target="_blank">Script Auto Chest</a></li>
+                
             </ul>
             <br>
         </div>
