--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     </div>
                 </a>
 
-                <a href="https://discord.io/hngamingr" target="_blank" class="social-margin">
+                <a href="https://dsc.gg/hngaming" target="_blank" class="social-margin">
                     <div class="social-icon discord">
                         <i class="fab fa-discord" aria-hidden="true"></i>
                     </div>
