--- a/index.html
+++ b/index.html
@@ -2,34 +2,34 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="anh2.png" type="image/x-icon">
-    <title>My Website</title>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9958064548866045"
-        crossorigin="anonymous"></script>
-    <link href="https://use.fontawesome.com/releases/v6.3.0/css/all.css" rel="stylesheet">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="style.css">
+	<link rel="shortcut icon" href="anh2.png" type="image/x-icon">
+	<title>My Website</title>
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+		integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9958064548866045"
+		crossorigin="anonymous"></script>
+	<link href="https://use.fontawesome.com/releases/v6.3.0/css/all.css" rel="stylesheet">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
 </head>
 
 <body>
-    <!-- header -->
-    <header>
+	<!-- header -->
+	<header>
 
-    </header>
+	</header>
 
-    <!-- center -->
-    <div class="card-container">
-        <span class="pro">BETA</span>
-        <img class="round" src="anh.jpg" alt="user" />
-        <h3>HN Gaming</h3>
-        <h6>I'm Youtube</h6>
+	<!-- center -->
+	<div class="card-container">
+		<span class="pro">BETA</span>
+		<img class="round" src="anh.jpg" alt="user" />
+		<h3>HN Gaming</h3>
+		<h6>I'm Youtube</h6>
         <div class="buttons">
             <div class="social-buttons">
                 <a href="http://www.facebook.com/hnhn0103" target="_blank" class="social-margin">
@@ -44,7 +44,7 @@
                     </div>
                 </a>
 
-                <a href="https://dsc.gg/hngaming" target="_blank" class="social-margin">
+                <a href="https://discord.io/hngamingr" target="_blank" class="social-margin">
                     <div class="social-icon discord">
                         <i class="fab fa-discord" aria-hidden="true"></i>
                     </div>
@@ -86,7 +86,7 @@
             <h6>DOWNLOAD HACK PC</h6>
             <ul>
                 <li class="a"><a href="https://link-hub.net/452021/hack-pc-krnl" target="_blank">Exploit Krnl</a></li>
-                
+                </li>
             </ul>
             <br>
         </div>
@@ -111,7 +111,53 @@
             document.execCommand("copy");
             $temp.remove();
         }
-    </script>
+        /////////hieu ung tuyet roi
+document.write('<style>body{padding-bottom:20px}#e_itexpress_left{display:none;position:fixed;z-index:9999;top:0;left:0}#e_itexpress_right{display:none;position:fixed;z-index:9999;top:0;right:0}#e_itexpress_footer{display:none;position:fixed;z-index:9999;bottom:-50px;left:0;width:100%;height:104px;background:url(https://itexpress.vn/images/noel/ft.png) repeat-x bottom left}#e_itexpress_bottom_left{display:none;position:fixed;z-index:9999;bottom:20px;left:20px}@media (min-width: 992px){#e_itexpress_left,#e_itexpress_right,#e_itexpress_footer,#e_itexpress_bottom_left{display:block}}</style><img id="e_itexpress_left" src="https://itexpress.vn/images/noel/topleft.png"/><img id="e_itexpress_right" src="https://itexpress.vn/images/noel/topright.png"/><div id="e_itexpress_footer"></div><img id="e_itexpress_bottom_left" src="https://itexpress.vn/images/noel/bottomleft.png"/>');
+
+var dx, xp, yp, am, stx, sty, no = 100, hidesnowtime = 0, snowdistance = "pageheight", ie4up = document.all ? 1 : 0, ns6up = document.getElementById && !document.all ? 1 : 0;
+function iecompattest() {
+	return document.compatMode && "BackCompat" != document.compatMode ? document.documentElement : document.body
+}
+var i, doc_width = 800, doc_height = 600;
+for (ns6up ? (doc_width = self.innerWidth,
+doc_height = self.innerHeight) : ie4up && (doc_width = iecompattest().clientWidth,
+doc_height = iecompattest().clientHeight),
+dx = new Array,
+xp = new Array,
+yp = new Array,
+am = new Array,
+stx = new Array,
+sty = new Array,
+i = 0; i < no; ++i)
+	dx[i] = 0,
+	xp[i] = Math.random() * (doc_width - 50),
+	yp[i] = Math.random() * doc_height,
+	am[i] = 20 * Math.random(),
+	stx[i] = .02 + Math.random() / 10,
+	sty[i] = .7 + Math.random(),
+	(ie4up || ns6up) && document.write('<div id="dot' + i + '" style="POSITION:absolute;Z-INDEX:' + i + ';VISIBILITY:visible;TOP:15px;LEFT:15px;"><span style="font-size:18px;color:#fff">*</span></div>');
+function snowIE_NS6() {
+	for (doc_width = ns6up ? window.innerWidth - 10 : iecompattest().clientWidth - 10,
+	doc_height = window.innerHeight && "windowheight" == snowdistance ? window.innerHeight : ie4up && "windowheight" == snowdistance ? iecompattest().clientHeight : ie4up && !window.opera && "pageheight" == snowdistance ? iecompattest().scrollHeight : iecompattest().offsetHeight,
+	i = 0; i < no; ++i)
+		yp[i] += sty[i],
+		yp[i] > doc_height - 50 && (xp[i] = Math.random() * (doc_width - am[i] - 30),
+		yp[i] = 0,
+		stx[i] = .02 + Math.random() / 10,
+		sty[i] = .7 + Math.random()),
+		dx[i] += stx[i],
+		document.getElementById("dot" + i).style.top = yp[i] + "px",
+		document.getElementById("dot" + i).style.left = xp[i] + am[i] * Math.sin(dx[i]) + "px";
+	snowtimer = setTimeout("snowIE_NS6()", 10)
+}
+function hidesnow() {
+	for (window.snowtimer && clearTimeout(snowtimer),
+	i = 0; i < no; i++)
+		document.getElementById("dot" + i).style.visibility = "hidden"
+}
+(ie4up || ns6up) && (snowIE_NS6(),
+0 < hidesnowtime && setTimeout("hidesnow()", 1e3 * hidesnowtime));
+	</script>
 
 </body>
 
