--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         </p>
     </footer>
 
-    <audio autoplay src="music.mp3"></audio>
+    <audio autoplay loop src="music.mp3"></audio>
 
     <script>
         function copyToClipboard(element) {
