--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9958064548866045"
-		crossorigin="anonymous"></script>
+     crossorigin="anonymous"></script>
 	<link href="https://use.fontawesome.com/releases/v6.3.0/css/all.css" rel="stylesheet">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
@@ -44,7 +44,7 @@
                     </div>
                 </a>
 
-                <a href="https://dsc.gg/hngaming" target="_blank" class="social-margin">
+                <a href="https://discord.gg/hngaming" target="_blank" class="social-margin">
                     <div class="social-icon discord">
                         <i class="fab fa-discord" aria-hidden="true"></i>
                     </div>
