--- a/index.html
+++ b/index.html
@@ -15,10 +15,15 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9958064548866045"
      crossorigin="anonymous"></script>
-
+	<script async custom-element="amp-auto-ads"
+        	src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
+	</script>
 </head>
 
 <body>
+	<amp-auto-ads type="adsense"
+        	data-ad-client="ca-pub-9958064548866045">
+	</amp-auto-ads>
 	<!-- header -->
 	<header>
 
