--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="google-adsense-account" content="ca-pub-9958064548866045">
 	<link rel="stylesheet" href="style.css">
 	<link rel="shortcut icon" href="anh2.png" type="image/x-icon">
 	<title>My Website</title>
